Reviewing modal, panel and drawer system

--- a/sass/bootstrap-style.scss
+++ b/sass/bootstrap-style.scss
@@ -19,7 +19,7 @@
 	--form-control-border-radius: .375rem;
 	--form-control-border-color: gainsboro;
 	--form-control-border: 1px solid var(--form-control-border-color);
-	--form-control-border-color-focused: var(--form-primary-color);
+	--form-control-border-color-focused: var(--primary);
 
 	/**
 	 * Specific
