--- a/sass/element/_Drawer.scss
+++ b/sass/element/_Drawer.scss
@@ -1,32 +1,33 @@
-.vlPanel{
-    position: relative;
-}
-.vlDrawers{
-    @extend .vlAbsoluteInset;
+.vlMask{
+    background-color: rgba(0, 0, 0, .8);
+    transition: opacity .3s ease;
     position: fixed;
-    overflow: hidden;
-    z-index: 120; //higher than vlSidebarToggler and form-controls
-    background-color: rgba(0, 0, 0, .75);
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    z-index: 1000;
+    >div{
+        outline: 0; //for when we focus for keypresses
+    }
 }
-.vlPanelClose{
+.vlDrawerClose{
     position: absolute;
     top: 1rem;
     right: 1rem;
     font-size: 1.5rem;
     color: white;
+    text-shadow: 0 5px 8px black;
     .icon-times{
         color: gainsboro;
-        text-shadow: 0 5px 8px white;
     }
 }
-.vlDrawer{
+.kompoDrawer{
     position: absolute;
     top: 0;
     bottom: 0;
     right: 0;
     max-width: 100vw;
-    box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
     overflow-y: auto;
-    height: 100vh;
-    background-color: white;
+    background-color: var(--body-color);
 }
