--- a/sass/form/common.scss
+++ b/sass/form/common.scss
@@ -15,6 +15,7 @@
 @import 'common/Place';
 @import 'common/Image';
 @import 'common/Json';
+@import 'common/LinkGroup';
 @import 'common/Radio';
 @import 'common/Select';
 @import 'common/Textarea';
