--- a/sass/element/_Modal.scss
+++ b/sass/element/_Modal.scss
@@ -1,17 +1,4 @@
 /* Modals */
-.vlModalMask{
-    position: fixed;
-    outline: 0; //for when we focus for keypresses
-    top: 0;
-    left: 0;
-    max-width: 100%;
-    max-height: 100vh;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, .8);
-    display: table;
-    transition: opacity .3s ease;
-}
 .vlModalClose{
     position:fixed;
     top: 0.5rem;
@@ -35,31 +22,15 @@
         right: 20px;
     }
 }
-.vlModalWrapper {
-    display: table-cell;
-    vertical-align: middle;
-    text-align: center;
-}
-.vlModalContainer {
-    display: inline-block;
+.kompoModal {
     max-height: 98vh;
     max-width: 98vw;
     /*overflow-y: auto;
     overflow-x: hidden;
     @extend .mini-scroll !optional;*/
     border-radius: 0.5rem;
-    background-color: #fff;
+    background-color: var(--body-color);
     box-shadow: 0 2px 8px rgba(0, 0, 0, .33);
     transition: all .3s ease;
     text-align: left;
-}
-
-.modal-enter,.modal-leave-active {
-    opacity: 0;
-}
-
-.modal-enter .vlModalContainer,
-.modal-leave-active .vlModalContainer {
-    -webkit-transform: scale(1.1);
-    transform: scale(1.1);
 }
