--- a/sass/element/_Shortcuts.scss
+++ b/sass/element/_Shortcuts.scss
@@ -1,6 +1,12 @@
-/* Adding tailwind shortcuts in case user does not want to use it */
+/* Adding used tailwind shortcuts in case user does not want to use it (relax, it's less than 1kb...) */
 .flex{
 	display: flex;
+}
+.flex-1{
+	flex: 1 1 0%;
+}
+.shrink-0{
+	flex-shrink: 0;
 }
 .flex-col{
 	flex-direction: column;
@@ -11,8 +17,29 @@
 .justify-between{
 	justify-content: space-between;
 }
-.flex-shrink-0{
-	flex-shrink: 0;
+.justify-center{
+	justify-content: center;
+}
+.justify-end{
+	justify-content: flex-end;
+}
+.justify-around{
+	justify-content: space-around;
+}
+.items-start{
+	align-items: flex-start;
+}
+.items-end{
+	align-items: flex-end;
+}
+.items-center{
+	align-items: center;
+}
+.items-baseline{
+	align-items: baseline;
+}
+.items-stretch{
+	align-items: stretch;
 }
 .h-full{
 	height: 100%;
@@ -25,8 +52,33 @@
 .cursor-pointer{
 	cursor: pointer;
 }
-.items-center{
-	align-items: center;
+.fixed{
+	position: fixed;
+}
+.absolute{
+	position: absolute;
+}
+.inset-0{
+	top: 0;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+}
+.overflow-y-auto{
+	overflow-y: auto;
+}
+.inline-block{
+	display: inline-block;
+}
+.h-screen{
+	height: 100vh;	
+}
+.min-h-screen{
+	min-height: 100vh;
+}
+.text-inherit{
+	color: inherit;
 }
 
 /* Personal shortcuts */
@@ -35,95 +87,19 @@
 	justify-content: center;
 	align-items: center;	
 }
-
-/* OLD APPROACH TO MERGE WITH TAILWIND CLASSES */
-.vlAbsoluteInset{
-	position: absolute;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
-}
-
-.vlFlexCol{
+.vlFlex{
 	display: flex;
-	flex-direction: column;
-}
-.vlP2{ padding: 0.5rem; }
-.vlCursorPointer{
-	cursor: pointer;
-}
-.vlColorInherit{
-	color: inherit;
-}
-
-/* Display, Position */
-.vl100vh{
-	height: 100vh;
-}
-.vlMin100vh{
-	min-height: 100vh;
 }
 .vlHidden{
 	display: none;
 }
-.vlBlock{
-	display: block;
-}
-.vlInlineBlock{
-	display: inline-block;
-}
-.vlFlex{
-	display: flex;
-}
-.vlFlex1{
-	flex: 1;
-}
-.vlWFull{
-	width: 100%;
-}
-.vlJustifyCenter{
-	justify-content: center;
-}
-.vlJustifyEnd{
-	justify-content: flex-end;
-}
-.vlJustifyBetween{
-	justify-content: space-between;
-}
-.vlJustifyAround{
-	justify-content: space-around;
-}
-.vlAlignStart{
-	align-items: flex-start;
-}
-.vlAlignCenter{
-	align-items: center;
-}
-.vlAlignEnd{
-	align-items: flex-end;
-}
-.vlAlignStretch{
-	align-items: stretch;
-}
-.vlAlignBaseline{
-	align-items: baseline;
+
+.bg-primary-light{
+	background-color: var(--primary-light);
 }
 
 @include media-breakpoint-up(md) {
 	.vlAlignCenterMd{
 		align-items: center;
-	}
-}
-
-@include media-breakpoint-up(lg) {
-	.vlFlexLg{
-		display: flex;
-	}
-	.vlHiddenLg{
-		display: none;
-	}
-	.vlBlockLg{
-		display: block;
 	}
 }
