--- a/sass/form/common/_Field.scss
+++ b/sass/form/common/_Field.scss
@@ -5,20 +5,13 @@
 	border: var(--form-control-border);
 	border-radius: var(--form-control-border-radius);
 
-	@if variable-exists(form-control-box-sizing){
-		box-sizing: $form-control-box-sizing;
-	}
-
 	&:focus{
-		outline: 0; //if focusable, for ex: in SelectButtons
+		outline: 0; //if focusable, for ex: in ButtonGroup
 	}
 	
 	&:focus-within{
 		border-color: var(--form-control-border-color-focused);
 		box-shadow: var(--focus-box-shadow);
-		@if variable-exists(form-control-border-width-focused){
-			border-width: $form-control-border-width-focused;
-		}
 	}
 	@if variable-exists(form-control-border-bottom){
 		border-bottom: $form-control-border-bottom;
