--- a/sass/md-filled-variables.scss
+++ b/sass/md-filled-variables.scss
@@ -17,7 +17,7 @@
 	--form-control-border-radius: .25rem .25rem 0 0;
 	--form-control-border-color: gainsboro;
 	--form-control-border: 0;
-	--form-control-border-color-focused: var(--form-primary-color);
+	--form-control-border-color-focused: var(--primary);
 }
 
 /**
