Fix package json and add rounded image

--- a/sass/form/common/_Field.scss
+++ b/sass/form/common/_Field.scss
@@ -71,8 +71,8 @@ input, textarea, select{
 	color: var(--form-field-error-color);
 	font-size: 80%;
 	padding-left: 0.25rem;
-	position: absolute;
-	bottom: -1.2rem;
+	//position: absolute;
+	//bottom: -1.2rem;
 }
 
 .vlReadOnly{
