Making popup resizing configurable

--- a/sass/element/_Popup.scss
+++ b/sass/element/_Popup.scss
@@ -5,7 +5,7 @@
     z-index: 5000;
     overflow: auto;
     border-radius: 0.5rem;
-    background-color: #fff;
+    background-color: var(--body-color);
     box-shadow: 0 2px 8px rgba(0, 0, 0, .33);
     transition: all .3s ease;
 }
