--- a/sass/form/common/_Image.scss
+++ b/sass/form/common/_Image.scss
@@ -48,6 +48,7 @@
 	color: var(--form-control-placeholder-color);
     i{
     	font-size: 2rem;
+    	cursor: pointer;
     }
     span{
 	    font-size: 90%;
