--- a/sass/element/_Alert.scss
+++ b/sass/element/_Alert.scss
@@ -14,15 +14,16 @@
     border: 1px solid;
     border-color: var(--primary);
     margin-top: 0.5rem;
-    >i{
-        padding-right: 0.5rem;
-    }
 }
 .vlAlertClose{
     position: absolute;
     top: 0;
     bottom: 0;
-    right: 0;
+    right: 0.25rem;
+    >i{
+        font-size: 120%;
+        opacity: 0.5;
+    }
     display: flex;
     align-items: center;
 }
