--- a/sass/element/elements.scss
+++ b/sass/element/elements.scss
@@ -28,13 +28,6 @@ $sidebar-breakpoint: md !default;
 	--btn-padding-y: 0.4rem;
 	--btn-border-radius: 0.375rem;
 
-	--tags-color: var(--primary);
-	--tags-bg: var(--primary-light);
-
-	--query-filters-spacing: 2rem;
-
-	--sidebar-breakpoint: 768px;
-
 	/**
 	* Form Colors
 	*/
@@ -43,6 +36,33 @@ $sidebar-breakpoint: md !default;
 	--form-label-color: var(--primary);
 	--form-label-color-focused: inherit;
 	--form-control-placeholder-color: gainsboro;
+
+	/**
+	 * Spacing
+	 */
+	--form-row-margin-t: 0rem;
+	--form-row-margin-b: 1.2rem;
+	--form-control-padding-t: 0.4rem;
+	--form-control-padding-r: 0.7rem;
+	--form-control-padding-b: 0.4rem;
+	--form-control-padding-l: 0.7rem;
+	--form-control-padding: var(--form-control-padding-t) var(--form-control-padding-r) var(--form-control-padding-b) var(--form-control-padding-l);
+	--form-control-min-height: 2.4rem;
+
+	/**
+	 * Borders
+	 */
+	--form-control-border-radius: .375rem;
+	--form-control-border-color: gainsboro;
+	--form-control-border: 1px solid var(--form-control-border-color);
+	--form-control-border-color-focused: var(--primary);
+
+	/**
+	* Query properties
+	*/
+	--query-filters-spacing: 2rem;
+	--table-border-color: var(--form-control-border-color);
+	--pagination-border-color: var(--form-control-border-color);
 
 	/**
 	 * Icons
@@ -54,6 +74,12 @@ $sidebar-breakpoint: md !default;
 	 */
 	--form-checkbox-height: 1.3rem;
 	--form-toggle-height: 1.54rem;
+
+	/**
+	 * Tags & Badge
+	 */
+	--tags-color: var(--primary);
+	--tags-bg: var(--primary-light);
 }
 
 [v-cloak] { display: none; }
