Add input range element

--- a/sass/form/common.scss
+++ b/sass/form/common.scss
@@ -17,6 +17,7 @@
 @import 'common/Json';
 @import 'common/LinkGroup';
 @import 'common/Radio';
+@import 'common/Range';
 @import 'common/Select';
 @import 'common/Textarea';
 @import 'common/Translatable';
