New Action emitRoot, Place editing, and bug fix for drawers

--- a/sass/form/common/_Place.scss
+++ b/sass/form/common/_Place.scss
@@ -1,3 +1,14 @@
 .pac-container{
 	z-index: 10000;
 }
+
+.vlPlace{
+	.place-editing{
+		display: none;
+	}
+	&:hover{
+		.place-editing{
+			display: block;
+		}
+	}
+}
