Add selectedStyle to kompo and fix npm warning

--- a/sass/form/common/_Select.scss
+++ b/sass/form/common/_Select.scss
@@ -33,7 +33,7 @@
 		background-color: var(--primary-light);
 	}
 	&.vlSelected{
-		background-color: mix(blue, #fff, 15);
+		background-color: mix(blue, #fff, 15%);
 		opacity: 0.5;
 	}
 	&.vlSelected.vlHoveredOption{
