Keep placeholder when user clicks cancel after file dialog

--- a/sass/form/common/_File.scss
+++ b/sass/form/common/_File.scss
@@ -16,5 +16,10 @@
 		.vlSingle{
 			color: var(--form-control-placeholder-color);
 		}
+		&.vlFocusedField .vlTaggableInput{
+			.vlSingle{
+				display: inline;
+			}
+		}
 	}
 }
